cabal-version:   3.4
name:            decompilerHs
version:         0.1.0.0
license:         GPL-3.0-or-later

-- The file containing the license text.
license-file:    LICENSE

-- A copyright notice.
-- copyright:
category:        Language
build-type:      Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common common-properties
  ghc-options:   -Wall

  -- cabal-fmt: expand src
  other-modules:
    Analyze
    CExpr
    CStmt
    CType
    Env
    M68k.Decompile
    M68k.Disassemble
    M68k.Env
    M68k.LongDouble
    M68k.Parse
    MonadOp
    Util

  build-depends:
    , array
    , base          ^>=4.17.2.0
    , binary
    , bytestring
    , containers
    , hmpfr
    , mtl
    , transformers
    , vector

executable Decompile
  import:           common-properties

  -- .hs or .lhs file containing the Main module.
  main-is:          decompiler.hs

  -- Directories containing source files.
  hs-source-dirs:   app src

  -- Base language which the package is written in.
  default-language: Haskell2010

executable Disassembler
  import:           common-properties

  -- .hs or .lhs file containing the Main module.
  main-is:          disassembler.hs

  -- Directories containing source files.
  hs-source-dirs:   app src

  -- Base language which the package is written in.
  default-language: Haskell2010

test-suite unit-test
  import:           common-properties
  type:             exitcode-stdio-1.0
  main-is:          M68kParseSpec.hs
  hs-source-dirs:   test src
  build-depends:    hspec
  default-language: Haskell2010
