cabal-version:   3.12
name:            m68k-decompiler
version:         0.1.0.0
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          pfhore-github
maintainer:      ookawa.michiaki@gmail.com
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common default
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
    , base      
    , binary
    , bytestring
    , containers
    , hmpfr
    , mtl
    , operational
    , transformers
    , vector

library
  import:          default

  -- cabal-fmt: expand src
  exposed-modules:
    Analyze
    CExpr
    CStmt
    CType
    Env
    M68k.Decompile
    M68k.Disassemble
    M68k.Env
    M68k.LongDouble
    M68k.Parse
    M68k.Recompile
    M68k.ConvToRtl
    MonadOp
    Mop
    Util
    RTL.Stmt

  hs-source-dirs:  src

executable m68k-decompiler
  import:         default
  main-is:        decompiler.hs

  -- other-modules:

  -- other-extensions:

  build-depends:
    , base             
    , m68k-decompiler

  hs-source-dirs: app

executable m68k-disassembler
  import:         default
  main-is:        disassembler.hs

  -- other-modules:

  -- other-extensions:

  build-depends:
    , base             
    , m68k-decompiler

  hs-source-dirs: app

executable m68k-dumprtl
  import:         default
  main-is:        dumprtl.hs

  -- other-modules:

  -- other-extensions:

  build-depends:
    , base             
    , m68k-decompiler

  hs-source-dirs: app

test-suite m68k-dumprtl-test
  import:           default
  default-language: Haskell2010

  -- cabal-fmt: expand test
  other-modules:
    M68k.ConvToRtlSpec
    TestCommon
    UtilSpec
    M68k.ParseSpec

  -- other-extensions:

  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          HSpecMain.hs

  -- Test dependencies.
  build-depends:
    , base             
    , hspec
    , m68k-decompiler
    , QuickCheck

