cabal-version:   3.12
name:            m68k-decompiler
version:         0.1.0.0
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          pfhore-github
maintainer:      ookawa.michiaki@gmail.com
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common default
  ghc-options:      -Wall -Wno-type-defaults
  default-language: Haskell2010
  build-depends:
    , base      
    , binary
    , bytestring
    , containers
    , hmpfr
    , mtl
    , operational
    , transformers
    , vector

library
  import:          default

  -- cabal-fmt: expand src
  exposed-modules:
    AST.Env
    M68k.Common
    M68k.Operand
    M68k.Opcode
    M68k.Decompile
    M68k.Disassemble
    M68k.Env
    M68k.LongDouble
    M68k.Parse
    M68k.ConvToAst
    Util
    AST.Analyze
    AST.CType
    AST.Stmt
    AST.Common
    AST.Expr 
    AST.Var 
  hs-source-dirs:  src

executable m68k-disassembler
  import:         default
  main-is:        disassembler.hs

  -- other-modules:

  -- other-extensions:

  build-depends:
    , base             
    , m68k-decompiler

  hs-source-dirs: app

Test-Suite Parse
    main-is:    HSpecMain.hs
    hs-source-dirs:   test
    default-language: Haskell2010

  build-depends:
    , base             
    , QuickCheck
    , hspec
    , m68k-decompiler
    , mtl
    , operational
    , transformers
    , vector

  other-modules:
    M68k.ConvToAstSpec
    M68k.ParseSpec
    M68k.OperandSpec
    UtilSpec
    TestCommon